Remove touch interaction on particles to fix mobile scrolling. Fix bug on mobile where header text did not overlay particles

--- a/css/creative.css
+++ b/css/creative.css
@@ -161,7 +161,9 @@ header.masthead {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover; }
+  background-size: cover;
+  height: 100%;
+  min-height: 600px; }
   header.masthead .header-content {
     position: relative;
     width: 100%;
@@ -180,28 +182,24 @@ header.masthead {
       font-weight: 300;
       margin-bottom: 50px;
       color: rgba(255, 255, 255, 0.7); }
-  @media (min-width: 768px) {
-    header.masthead {
-      height: 100%;
-      min-height: 600px; }
-      header.masthead .header-content {
-        position: absolute;
-        top: 50%;
-        padding: 0 50px;
-        -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%); }
-        header.masthead .header-content .header-content-inner {
-          max-width: 1000px;
-          margin-right: auto;
-          margin-left: auto; }
-          header.masthead .header-content .header-content-inner h1 {
-            font-size: 50px; }
-          header.masthead .header-content .header-content-inner p {
-            font-size: 18px;
-            max-width: 80%;
-            margin-right: auto;
-            margin-left: auto; } }
+  header.masthead .header-content {
+    position: absolute;
+    top: 50%;
+    padding: 0 50px;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); }
+    header.masthead .header-content .header-content-inner {
+      max-width: 1000px;
+      margin-right: auto;
+      margin-left: auto; }
+      header.masthead .header-content .header-content-inner h1 {
+        font-size: 50px; }
+      header.masthead .header-content .header-content-inner p {
+        font-size: 18px;
+        max-width: 80%;
+        margin-right: auto;
+        margin-left: auto; }
 
 .service-box {
   max-width: 400px;
