--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -32,7 +32,7 @@ header.masthead {
       }
     }
   }
-  @media (min-width: 768px) {
+  // @media (min-width: 768px) {
     height: 100%;
     min-height: 600px;
     .header-content {
@@ -57,5 +57,5 @@ header.masthead {
         }
       }
     }
-  }
+  // }
 }
